Fix some of the language on strings, and move back to "upload" and "download" terminology

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -1,32 +1,32 @@
 {
     "config_onion_service": "Setting up onion service on port {0:d}.",
-    "preparing_files": "Preparing share.",
+    "preparing_files": "Compressing files.",
     "give_this_url": "Give this address to the recipient:",
-    "give_this_url_stealth": "Give this inbox address and HidServAuth line to the recipient:",
-    "give_this_url_receive": "Give this inbox address to the sender:",
-    "give_this_url_receive_stealth": "Give this inbox address and HidServAuth to the sender:",
+    "give_this_url_stealth": "Give this address and HidServAuth line to the recipient:",
+    "give_this_url_receive": "Give this address to the sender:",
+    "give_this_url_receive_stealth": "Give this address and HidServAuth to the sender:",
     "ctrlc_to_stop":  "Press Ctrl+C to stop the server",
     "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
     "no_available_port": "Could not find an available port to start the onion service",
-    "other_page_loaded": "Inbox address loaded",
-    "close_on_timeout": "Stopped because timeframe ran out",
-    "closing_automatically": "Stopped because you have the complete share",
-    "timeout_download_still_running": "Awaiting completion of share transfer to you",
+    "other_page_loaded": "Address loaded",
+    "close_on_timeout": "Stopped because auto-stop timer ran out",
+    "closing_automatically": "Stopped because download finished",
+    "timeout_download_still_running": "Waiting for download to complete",
     "large_filesize": "Warning: Sending a large share could take hours",
     "systray_menu_exit": "Quit",
-    "systray_download_started_title": "Sending…",
-    "systray_download_started_message": "Your share is being sent.",
-    "systray_download_completed_title": "Share sent",
-    "systray_download_completed_message": "Your share has been sent.",
-    "systray_download_canceled_title": "Share cancelled",
-    "systray_download_canceled_message": "The recipient cancelled the share.",
-    "systray_upload_started_title": "Receiving…",
-    "systray_upload_started_message": "Started share transfer to inbox.",
-    "help_local_only": "Avoid using Tor: (Only for development)",
-    "help_stay_open": "Keep sending after one completion",
+    "systray_download_started_title": "OnionShare Download Started",
+    "systray_download_started_message": "A user started downloading your files",
+    "systray_download_completed_title": "OnionShare Download Finished",
+    "systray_download_completed_message": "The user finished downloading your files",
+    "systray_download_canceled_title": "OnionShare Download Canceled",
+    "systray_download_canceled_message": "The user canceled the download",
+    "systray_upload_started_title": "OnionShare Upload Started",
+    "systray_upload_started_message": "A user started uploading files to your computer",
+    "help_local_only": "Don't use Tor (only for development)",
+    "help_stay_open": "Keep sharing after first download",
     "help_shutdown_timeout": "Stop sharing after a given amount of seconds",
-    "help_stealth": "Make share that requires HidServAuth (advanced)",
+    "help_stealth": "Use client authorization (advanced)",
     "help_receive": "Receive shares instead of sending them",
     "help_debug": "Log OnionShare errors to stdout, and web errors to disk",
     "help_filename": "List of files or folders to share",
@@ -35,40 +35,40 @@
     "gui_add": "Add",
     "gui_delete": "Delete",
     "gui_choose_items": "Choose",
-    "gui_share_start_server": "Share",
-    "gui_share_stop_server": "Stop",
-    "gui_share_stop_server_shutdown_timeout": "Stop sharing ({}s remaining)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Allowed sharing timeframe ends {}",
-    "gui_receive_start_server": "Receive",
-    "gui_receive_stop_server": "Stop",
-    "gui_receive_stop_server_shutdown_timeout": "Stop receiving ({}s remaining)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Allowed receive timeframe ends {}",
+    "gui_share_start_server": "Start sharing",
+    "gui_share_stop_server": "Stop sharing",
+    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
+    "gui_receive_start_server": "Start Receive Mode",
+    "gui_receive_stop_server": "Stop Receive Mode",
+    "gui_receive_stop_server_shutdown_timeout": "Stop Receive Mode ({}s remaining)",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
-    "gui_downloads": "History of sent shares",
-    "gui_no_downloads": "None yet.",
-    "gui_canceled": "Cancelled",
-    "gui_copied_url_title": "Copied",
+    "gui_downloads": "Download History",
+    "gui_no_downloads": "No downloads yet.",
+    "gui_canceled": "Canceled",
+    "gui_copied_url_title": "Copied OnionShare Address",
     "gui_copied_url": "OnionShare address copied to clipboard",
-    "gui_copied_hidservauth_title": "Copied",
+    "gui_copied_hidservauth_title": "Copied HidServAuth",
     "gui_copied_hidservauth": "HidServAuth line copied to clipboard",
     "gui_please_wait": "Starting… Click to cancel.",
     "gui_download_upload_progress_complete": "%p%, {0:s} elapsed.",
-    "gui_download_upload_progress_starting": "{0:s}, %p% (calculating end time.)",
+    "gui_download_upload_progress_starting": "{0:s}, %p% (calculating)",
     "gui_download_upload_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Not so fast",
-    "gui_share_quit_warning": "Quitting now means files en route elsewhere won't finish.",
-    "gui_receive_quit_warning": "Quitting now means files en route to you won't finish.",
+    "gui_share_quit_warning": "You're in the process of sending files. Are you sure you want to quit OnionShare?",
+    "gui_receive_quit_warning": "You're in the process of receiving files. Are you sure you want to quit OnionShare?",
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
-    "error_rate_limit": "Too many wrong attempts on your sharing address means someone could be trying to guess it. Start OnionShare again and send a new address to share.",
-    "zip_progress_bar_format": "Making share smaller: %p%",
-    "error_stealth_not_supported": "To create shares that require knowing HidServAuth, you need at least both Tor 0.2.9.1-alpha (or Tor Browser 6.5) and python3-stem 1.5.0.",
+    "error_rate_limit": "Someone has made too many wrong attempts on your address, which means they could be trying to guess it, so OnionShare has stopped the server. Start sharing again and send the receipient a new address to share.",
+    "zip_progress_bar_format": "Compressing: %p%",
+    "error_stealth_not_supported": "To use client authorization, you need at least both Tor 0.2.9.1-alpha (or Tor Browser 6.5) and python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least both Tor 0.2.7.1 and python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
     "gui_settings_whats_this": "<a href='{0:s}'>What's this?</a>",
-    "gui_settings_stealth_option": "Create share that requires knowing HidServAuth (legacy)",
+    "gui_settings_stealth_option": "Use client authorization (legacy)",
     "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can now\nclick to copy your HidServAuth.",
     "gui_settings_autoupdate_label": "Check for new version",
     "gui_settings_autoupdate_option": "Notify me when a new version is available",
@@ -77,7 +77,7 @@
     "gui_settings_autoupdate_check_button": "Check for New Version",
     "gui_settings_general_label": "General settings",
     "gui_settings_sharing_label": "Sharing settings",
-    "gui_settings_close_after_first_download_option": "Stop sharing after first completion",
+    "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use the Tor version built into OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt auto-configuration with Tor Browser",
@@ -87,8 +87,8 @@
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
     "gui_settings_socks_label": "SOCKS port",
-    "gui_settings_authenticate_label": "Tor identification settings",
-    "gui_settings_authenticate_no_auth_option": "None or cookie based",
+    "gui_settings_authenticate_label": "Tor authentication settings",
+    "gui_settings_authenticate_no_auth_option": "No authentication, or cookie authentication",
     "gui_settings_authenticate_password_option": "Password",
     "gui_settings_password_label": "Password",
     "gui_settings_tor_bridges": "Tor bridge support",
@@ -104,15 +104,15 @@
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
-    "gui_settings_shutdown_timeout_checkbox": "Stop sharing after a given timeframe",
-    "gui_settings_shutdown_timeout": "Allowed sharing timeframe:",
+    "gui_settings_shutdown_timeout_checkbox": "Use auto-stop timer",
+    "gui_settings_shutdown_timeout": "Stop the share at:",
     "settings_saved": "Settings saved in {}",
-    "settings_error_unknown": "Can't connect to Tor controller because it knows your settings aren't making sense.",
-    "settings_error_automatic": "Could not connect to the Tor controller. The Tor Browser (available from https://www.torproject.org/)\nneeds to be running in the background.",
+    "settings_error_unknown": "Can't connect to Tor controller because your settings don't make sense.",
+    "settings_error_automatic": "Could not connect to the Tor controller. Is Tor Browser (available from https://www.torproject.org/)\nrunning in the background?",
     "settings_error_socket_port": "Can't connect to the Tor controller at {}:{}.",
-    "settings_error_socket_file": "The Tor controller does not allow connection using the socket file {}.",
+    "settings_error_socket_file": "Can't connect to the Tor controller using socket file {}.",
     "settings_error_auth": "Connected to {}:{}, but can't authenticate. Maybe this isn't a Tor controller?",
-    "settings_error_missing_password": "Connected to the Tor controller, type in the password for it.",
+    "settings_error_missing_password": "Connected to Tor controller, but it requires a password to authenticate.",
     "settings_error_unreadable_cookie_file": "Connected to the Tor controller, but password may be wrong, or your user is not permitted to read the cookie file.",
     "settings_error_bundled_tor_not_supported": "Using the Tor version that comes with OnionShare does not work in developer mode on Windows or macOS.",
     "settings_error_bundled_tor_timeout": "Taking too long to connect to Tor. Maybe you aren't connected to the Internet, or have an inaccurate system clock?",
@@ -125,60 +125,60 @@
     "update_available": "New OnionShare out. <a href='{}'>Click here</a> to get it.<br><br>You are using {} and the latest is {}.",
     "update_error_check_error": "Could not check for new versions: The OnionShare website is saying the latest version is the unrecognizable '{}'…",
     "update_error_invalid_latest_version": "Could not check for new version: Maybe you're not connected to Tor, or the OnionShare website is down?",
-    "update_not_available": "Running the latest OnionShare.",
+    "update_not_available": "You are running the latest OnionShare.",
     "gui_tor_connection_ask": "Open the settings to sort out connection to Tor?",
     "gui_tor_connection_ask_open_settings": "Yes",
     "gui_tor_connection_ask_quit": "Quit",
     "gui_tor_connection_error_settings": "Try changing how OnionShare connects to the Tor network in the settings.",
     "gui_tor_connection_canceled": "Could not connect to Tor.\n\nEnsure you are connected to the Internet, then re-open OnionShare and set up its connection to Tor.",
     "gui_tor_connection_lost": "Disconnected from Tor.",
-    "gui_server_started_after_timeout": "The chosen allowed sharing timeframe ran out before the server started.\nPlease make a new share.",
-    "gui_server_timeout_expired": "The chosen allowed sharing timeframe already ran out.\nPlease update it to start sharing.",
+    "gui_server_started_after_timeout": "The auto-stop timer ran out before the server started.\nPlease make a new share.",
+    "gui_server_timeout_expired": "The auto-stop timer already ran out.\nPlease update it to start sharing.",
     "share_via_onionshare": "OnionShare it",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
     "gui_save_private_key_checkbox": "Use a persistent address (legacy)",
-    "gui_share_url_description": "<b>Anyone</b> with this OnionShare address can fetch your share using the <b>Tor Browser</b>: <img src='{}' />",
-    "gui_receive_url_description": "<b>Anyone</b> with this link can <b>upload</b> files to your inbox folder using the <b>Tor Browser</b>: <img src='{}' />",
-    "gui_url_label_persistent": "This share will not auto-expire unless a timeframe is set.<br><br>Every subsequent share reuse the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
-    "gui_url_label_stay_open": "This share will not auto-expire unless a timeframe is set.",
-    "gui_url_label_onetime": "This share will expire after first completion.",
-    "gui_url_label_onetime_and_persistent": "This share will not auto-expire unless a timeframe is set.<br><br>Every subsequent share will reuse the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
+    "gui_share_url_description": "<b>Anyone</b> with this OnionShare address can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
+    "gui_receive_url_description": "<b>Anyone</b> with this OnionShare address can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
+    "gui_url_label_persistent": "This share will not auto-stop.<br><br>Every subsequent share reuses the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
+    "gui_url_label_stay_open": "This share will not auto-stop.",
+    "gui_url_label_onetime": "This share will stop after first completion.",
+    "gui_url_label_onetime_and_persistent": "This share will not auto-stop.<br><br>Every subsequent share will reuse the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
     "gui_status_indicator_share_stopped": "Ready to share",
     "gui_status_indicator_share_working": "Starting…",
     "gui_status_indicator_share_started": "Sharing",
-    "gui_status_indicator_receive_stopped": "Ready to fetch",
+    "gui_status_indicator_receive_stopped": "Ready to receive",
     "gui_status_indicator_receive_working": "Starting…",
-    "gui_status_indicator_receive_started": "Fetching",
+    "gui_status_indicator_receive_started": "Receiving",
     "gui_file_info": "{} files, {}",
     "gui_file_info_single": "{} file, {}",
-    "info_in_progress_downloads_tooltip": "{} incoming",
-    "info_completed_downloads_tooltip": "{} incoming completed",
-    "info_in_progress_uploads_tooltip": "{} outgoing",
-    "info_completed_uploads_tooltip": "{} outgoing completed",
-    "error_cannot_create_downloads_dir": "Could not create inbox: {}",
-    "error_downloads_dir_not_writable": "The inbox folder is write protected: {}",
+    "info_in_progress_downloads_tooltip": "{} download(s) in progress",
+    "info_completed_downloads_tooltip": "{} download(s) completed",
+    "info_in_progress_uploads_tooltip": "{} upload(s) in progress",
+    "info_completed_uploads_tooltip": "{} upload(s) completed",
+    "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
+    "error_downloads_dir_not_writable": "The receive mode folder is write protected: {}",
     "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
-    "receive_mode_warning": "Warning: Receive mode lets someone else upload files to your computer, potentially taking control of it if you open them. Only open things from people you trust to know what they are doing.",
-    "gui_receive_mode_warning": "<b>A share could contain files that take control of your computer if opened!</b><br>Only open things from people you trust to know what they are doing.",
+    "receive_mode_warning": "Warning: Receive mode lets someone else upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
+    "gui_receive_mode_warning": "<b>Receive mode lets someone else upload files to your computer. Some files can potentially take control of your computer if you open them.</b><br>Only open things from people you trust, or if you know what you are doing.",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
     "receive_mode_received_file": "Received: {}",
-    "gui_mode_share_button": "Share",
-    "gui_mode_receive_button": "Receive",
-    "gui_settings_receiving_label": "Reception settings",
-    "gui_settings_downloads_label": "Save shares to",
+    "gui_mode_share_button": "Share Files",
+    "gui_mode_receive_button": "Receive Files",
+    "gui_settings_receiving_label": "Receiving settings",
+    "gui_settings_downloads_label": "Save files to",
     "gui_settings_downloads_button": "Browse",
     "gui_settings_receive_allow_receiver_shutdown_checkbox": "Receive mode can be stopped by the sender",
     "gui_settings_public_mode_checkbox": "Public mode",
-    "systray_close_server_title": "OnionShare Server Shut Down",
+    "systray_close_server_title": "OnionShare Server Closed",
     "systray_close_server_message": "A user closed the server",
     "systray_page_loaded_title": "OnionShare Page Loaded",
-    "systray_download_page_loaded_message": "Your page has been loaded",
-    "systray_upload_page_loaded_message": "Someone is browsing what you share",
-    "gui_uploads": "Sent Shares",
-    "gui_no_uploads": "Nothing sent yet.",
-    "gui_clear_history": "Clear",
-    "gui_upload_in_progress": "Delivery Started {}",
-    "gui_upload_finished_range": "Sent {} to {}",
-    "gui_upload_finished": "Sent {}",
-    "gui_open_folder_error_nautilus": "Cannot open folder without a file manager. The file is here: {}"
+    "systray_download_page_loaded_message": "A user loaded the download page",
+    "systray_upload_page_loaded_message": "A user loaded the upload page",
+    "gui_uploads": "Upload History",
+    "gui_no_uploads": "No uploads yet.",
+    "gui_clear_history": "Clear history",
+    "gui_upload_in_progress": "Upload Started {}",
+    "gui_upload_finished_range": "Uploaded {} to {}",
+    "gui_upload_finished": "Uploaded {}",
+    "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}"
 }
