Fixes a few strings after testing

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -108,7 +108,7 @@
     "gui_settings_shutdown_timeout": "Stop the share at:",
     "settings_saved": "Settings saved in {}",
     "settings_error_unknown": "Can't connect to Tor controller because your settings don't make sense.",
-    "settings_error_automatic": "Could not connect to the Tor controller. Is Tor Browser (available from https://www.torproject.org/)\nrunning in the background?",
+    "settings_error_automatic": "Could not connect to the Tor controller. Is Tor Browser (available from torproject.org) running in the background?",
     "settings_error_socket_port": "Can't connect to the Tor controller at {}:{}.",
     "settings_error_socket_file": "Can't connect to the Tor controller using socket file {}.",
     "settings_error_auth": "Connected to {}:{}, but can't authenticate. Maybe this isn't a Tor controller?",
@@ -117,7 +117,7 @@
     "settings_error_bundled_tor_not_supported": "Using the Tor version that comes with OnionShare does not work in developer mode on Windows or macOS.",
     "settings_error_bundled_tor_timeout": "Taking too long to connect to Tor. Maybe you aren't connected to the Internet, or have an inaccurate system clock?",
     "settings_error_bundled_tor_broken": "OnionShare could not connect to Tor in the background:\n{}",
-    "settings_test_success": "Connected to the Tor controller.\n\nTor version: {}\nSupports ephemeral onion services: {}.\nSupports shares that require HidServAuth: {}.",
+    "settings_test_success": "Connected to the Tor controller.\n\nTor version: {}\nSupports ephemeral onion services: {}.\nSupports client authentication: {}.",
     "error_tor_protocol_error": "There was an error with Tor: {}",
     "error_tor_protocol_error_unknown": "There was an unknown error with Tor",
     "error_invalid_private_key": "This private key type is unsupported",
@@ -158,8 +158,8 @@
     "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
     "error_downloads_dir_not_writable": "The receive mode folder is write protected: {}",
     "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
-    "receive_mode_warning": "Warning: Receive mode lets someone else upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
-    "gui_receive_mode_warning": "<b>Receive mode lets someone else upload files to your computer. Some files can potentially take control of your computer if you open them.</b><br>Only open things from people you trust, or if you know what you are doing.",
+    "receive_mode_warning": "Warning: Receive mode lets people upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
+    "gui_receive_mode_warning": "Receive mode lets people upload files to your computer.<br><br><b>Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.</b>",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
     "receive_mode_received_file": "Received: {}",
     "gui_mode_share_button": "Share Files",
