Publish static website via onionshare

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -16,6 +16,8 @@
     "timeout_upload_still_running": "Waiting for upload to complete",
     "large_filesize": "Warning: Sending a large share could take hours",
     "systray_menu_exit": "Quit",
+    "systray_connection_started_title": "OnionShare Connection Started",
+    "systray_connection_started_message": "A user connected to your website",
     "systray_download_started_title": "OnionShare Download Started",
     "systray_download_started_message": "A user started downloading your files",
     "systray_download_completed_title": "OnionShare Download Finished",
@@ -24,12 +26,13 @@
     "systray_download_canceled_message": "The user canceled the download",
     "systray_upload_started_title": "OnionShare Upload Started",
     "systray_upload_started_message": "A user started uploading files to your computer",
-    "help_local_only": "Don't use Tor (only for development)",
-    "help_stay_open": "Keep sharing after first download",
-    "help_shutdown_timeout": "Stop sharing after a given amount of seconds",
-    "help_stealth": "Use client authorization (advanced)",
-    "help_receive": "Receive shares instead of sending them",
-    "help_debug": "Log OnionShare errors to stdout, and web errors to disk",
+    "help_local_only": "Do not attempt to use Tor: For development only",
+    "help_stay_open": "Keep onion service running after download has finished",
+    "help_shutdown_timeout": "Shut down the onion service after N seconds",
+    "help_stealth": "Create stealth onion service (advanced)",
+    "help_receive": "Receive files instead of sending them",
+    "help_website": "Share a static website (html, js, css, images)",
+    "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
     "help_config": "Custom JSON config file location (optional)",
     "gui_drag_and_drop": "Drag and drop files and folders\nto start sharing",
@@ -50,6 +53,8 @@
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Download History",
     "gui_no_downloads": "No Downloads Yet",
+    "gui_publishing": "Connections History",
+    "gui_no_publishing": "Website has not been published yet",
     "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied OnionShare Address",
     "gui_copied_url": "OnionShare address copied to clipboard",
@@ -158,6 +163,7 @@
     "history_completed_tooltip": "{} completed",
     "info_in_progress_uploads_tooltip": "{} upload(s) in progress",
     "info_completed_uploads_tooltip": "{} upload(s) completed",
+    "info_in_progress_connections_tooltip": "{} connection(s) in progress",
     "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
     "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
     "receive_mode_warning": "Warning: Receive mode lets people upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
@@ -166,6 +172,7 @@
     "receive_mode_received_file": "Received: {}",
     "gui_mode_share_button": "Share Files",
     "gui_mode_receive_button": "Receive Files",
+    "gui_mode_website_button": "Publish Website",
     "gui_settings_receiving_label": "Receiving settings",
     "gui_settings_downloads_label": "Save files to",
     "gui_settings_downloads_button": "Browse",
@@ -174,6 +181,7 @@
     "systray_close_server_message": "A user closed the server",
     "systray_page_loaded_title": "OnionShare Page Loaded",
     "systray_download_page_loaded_message": "A user loaded the download page",
+    "systray_website_loaded_message": "A user loaded your website",
     "systray_upload_page_loaded_message": "A user loaded the upload page",
     "gui_uploads": "Upload History",
     "gui_no_uploads": "No Uploads Yet",
