--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -46,7 +46,7 @@
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Download History",
-    "gui_no_downloads": "No downloads yet.",
+    "gui_no_downloads": "No Downloads Yet",
     "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied OnionShare Address",
     "gui_copied_url": "OnionShare address copied to clipboard",
@@ -176,7 +176,7 @@
     "systray_upload_page_loaded_message": "A user loaded the upload page",
     "gui_uploads": "Upload History",
     "gui_no_uploads": "No uploads yet.",
-    "gui_clear_history": "Clear history",
+    "gui_clear_history": "Clear All",
     "gui_upload_in_progress": "Upload Started {}",
     "gui_upload_finished_range": "Uploaded {} to {}",
     "gui_upload_finished": "Uploaded {}",
