Delete Info widget, and move completed and in progress widgets into the header of history

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -151,8 +151,8 @@
     "gui_status_indicator_receive_started": "Receiving",
     "gui_file_info": "{} files, {}",
     "gui_file_info_single": "{} file, {}",
-    "info_in_progress_downloads_tooltip": "{} download(s) in progress",
-    "info_completed_downloads_tooltip": "{} download(s) completed",
+    "history_in_progress_tooltip": "{} in progress",
+    "history_completed_tooltip": "{} completed",
     "info_in_progress_uploads_tooltip": "{} upload(s) in progress",
     "info_completed_uploads_tooltip": "{} upload(s) completed",
     "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
