Add "download started" date/time to download history progress bars

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -180,5 +180,6 @@
     "gui_upload_in_progress": "Upload Started {}",
     "gui_upload_finished_range": "Uploaded {} to {}",
     "gui_upload_finished": "Uploaded {}",
+    "gui_download_in_progress": "Download Started {}",
     "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}"
 }
