--- a/share/locale/it.json
+++ b/share/locale/it.json
@@ -16,7 +16,7 @@
     "gui_choose_items": "Scegli",
     "gui_share_start_server": "Inizia la condivisione",
     "gui_share_stop_server": "Ferma la condivisione",
-    "gui_copy_url": "Copia lo URL",
+    "gui_copy_url": "Copia l' URL",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Cancellati",
     "gui_copied_url": "URL Copiato nella clipboard",
